name:                euler
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
-- license-file:     LICENSE
author:              Brandon Byskov
-- maintainer:
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:      src
  exposed-modules:
    Euler.FileIO
    Euler.Problem
    Euler.Support
  build-depends:       base >=4.6
  ghc-options:         -O

executable euler
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >=4.6, euler
  ghc-options:         -O "-with-rtsopts=-M512M -K16M"
